# RenpySwitch

./: CMakeLists.txt  README.md  build.bash  encryption.patch  ffmedia-ffmpeg7.patch  ffmedia.c  generate_private.py  link_sources.bash  pygame_sdl2_py3.patch  renpy.patch  renpy_py3.patch  script.rpy  setup.bash  switch.h  switch_enc.h  video_player.h
.github/workflows/: main.yml
sources/: main.c  video_player.c  video_player.h
switch/: CMakeLists.txt
switch/source/: main.c
